--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
   # this is our kafka cluster.
   kafka-cluster:
-    image: landoop/fast-data-dev:latest  #:cp3.3.0 # cp4.0.0 , latest
+    image: landoop/fast-data-dev:cp3.3.0 #:latest  #:cp3.3.0 # cp4.0.0 , latest
     environment:
       ADV_HOST: 127.0.0.1         # Change to 192.168.99.100 if using Docker Toolbox
       RUNTESTS: 0                 # Disable Running tests so the cluster starts faster
